[gd_scene load_steps=6 format=1]

[ext_resource path="res://script/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Untitled.png" type="Texture" id=2]
[ext_resource path="res://font/commodore_32.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/map.png" type="Texture" id=4]
[ext_resource path="res://font/commodore_16.fnt" type="BitmapFont" id=5]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )
screen_move_speed = 800

[node name="background" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="splash" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="main" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 72.0
alignment = 0

[node name="logo" type="TextureFrame" parent="main"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="splash" type="Node2D" parent="main/logo"]

[node name="Label" type="Label" parent="main/logo/splash"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="main/logo/splash"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="label" type="Label" parent="main/logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 120.0
custom_colors/font_color = Color( 0.92218, 1, 0.00390625, 1 )
custom_colors/font_color_shadow = Color( 0.0351563, 0, 0, 1 )
text = "Explored"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buttons" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -80.0
margin/top = -330.0
margin/right = -280.0
margin/bottom = -517.0
custom_constants/separation = 25
alignment = 1

[node name="levels" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 45.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Levels"
flat = false

[node name="options" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 70.0
margin/right = 200.0
margin/bottom = 115.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="exit" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 140.0
margin/right = 200.0
margin/bottom = 187.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="levels" type="ReferenceFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1023.0
margin/top = 0.0
margin/right = 2047.0
margin/bottom = 600.0

[node name="TextureFrame" type="TextureFrame" parent="levels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="back" type="Button" parent="levels"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 177.0
margin/bottom = 55.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "< Back"
flat = false

[node name="level_1" type="Button" parent="levels"]

hint/tooltip = "Grassy Lands 1"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 78.0
margin/top = 84.0
margin/right = 128.0
margin/bottom = 134.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1"
flat = false

[node name="popup_1" type="PopupPanel" parent="levels/level_1"]

visibility/visible = false
anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 246.0
margin/top = 61.0
margin/right = 752.0
margin/bottom = -206.0
popup/exclusive = false

[node name="play_1" type="Button" parent="levels/level_1/popup_1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 200.0
margin/right = 178.0
margin/bottom = 240.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="Label" type="Label" parent="levels/level_1/popup_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 19.0
margin/right = 357.0
margin/bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "GrassyLands 1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close_1" type="Button" parent="levels/level_1/popup_1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 443.0
margin/top = 17.0
margin/right = 489.0
margin/bottom = 57.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="Label 2" type="Label" parent="levels/level_1/popup_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 59.0
margin/top = 69.0
margin/right = 339.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 5 )
text = "This is the start of our great Beeginning."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="level_2" type="Button" parent="levels"]

hint/tooltip = "Grassy Lands 1"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 255.0
margin/top = 68.0
margin/right = 290.0
margin/bottom = 103.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2"
flat = false

[node name="popup_1" type="PopupPanel" parent="levels/level_2"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 6.0
margin/right = 646.0
margin/bottom = 382.0
popup/exclusive = false

[node name="play_1" type="Button" parent="levels/level_2/popup_1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 51.0
margin/top = 303.0
margin/right = 191.0
margin/bottom = 343.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="Label" type="Label" parent="levels/level_2/popup_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 19.0
margin/right = 357.0
margin/bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "GrassyLands 1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close_1" type="Button" parent="levels/level_2/popup_1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 443.0
margin/top = 17.0
margin/right = 489.0
margin/bottom = 57.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="Label 2" type="Label" parent="levels/level_2/popup_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 59.0
margin/top = 69.0
margin/right = 339.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 5 )
text = "The grassy lands of Be as a B. All b's must srtart somewhere."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="map" type="CanvasLayer" parent="levels"]

layer = 1
offset = Vector2( 1024, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="options" type="ReferenceFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 600.0
margin/right = 1024.0
margin/bottom = 1200.0

[node name="back" type="Button" parent="options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 177.0
margin/bottom = 55.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "^ Back"
flat = false

[node name="tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="levels/level_1" to="." method="_on_level_1_pressed"]

[connection signal="pressed" from="levels/level_1/popup_1/play_1" to="." method="_on_play_1_pressed"]

[connection signal="pressed" from="levels/level_1/popup_1/close_1" to="." method="_on_close_1_pressed"]


